# evrmore-accounts

./: .gitignore  404.html  Dockerfile  MANIFEST.in  Makefile  README.md  deploy-docs.sh  evrmore-accounts.js  evrmore_accounts.db  healthcheck.py  implementation_plan.md  index.html  mkdocs.yml  objects.inv  package.json  publish.sh  pyproject.toml  requirements.txt  run.py  run_gunicorn.sh  security_audit_report.md  setup.cfg  setup.py  simple_integration_example.html  sitemap.xml  test_accounts.py  test_backend.py  test_evrmore_accounts.py  test_reorganization.py  wsgi.py
about/changelog/: index.html
about/license/: index.html
api/backend/: index.html
api/javascript/: index.html
config/: .env.example  config.py
data/: evrmore_auth.db
development/contributing/: index.html
development/security/: index.html
development/testing/: index.html
docs/: PROJECT_STRUCTURE.md  SECURITY.md  project_summary.md  security_implementation_guide.md
docs/api/: javascript.md
docs/guide/: deployment.md  quickstart.md
evrmore_accounts/: __init__.py  advanced_rate_limiter.py  api.py  app.py  database.py  security_headers.py  server_security.py
evrmore_accounts/api/: __init__.py  auth.py  errors.py  health.py  server.py  twofa.py  user.py
evrmore_accounts/data/: evrmore_accounts.db  init_db.py
evrmore_accounts/templates/: index.html
examples/basic/: index.html
examples/custom-ui/: index.html
frontend/: package-lock.json
scripts/: init_db.py  run.py  run_gunicorn.sh
search/: search_index.json
tests/: __init__.py  test_results.json
(+13 files in other folders)
