[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
include_package_data = True

[options.package_data]
evrmore_accounts = 
    data/*

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    black>=20.8b1
    isort>=5.0.0
    flake8>=3.8.0
    mkdocs>=1.1.0
    mkdocs-material>=7.0.0
    mkdocstrings>=0.15.0

test =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    colorama>=0.4.4

docs =
    mkdocs>=1.1.0
    mkdocs-material>=7.0.0
    mkdocstrings>=0.15.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_* 